--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/preset-env": "^7.10.2",
     "browser-sync": "^2.27.7",
     "del": "^3.0.0",
+    "gh-pages": "^3.2.3",
     "jquery": "^3.3.1",
     "yards": "^0.1.4"
   },
